Parallelization improvements and output bug fixes